modified env variables